--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "netlify-identity-widget": "^1.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
@@ -29,3 +30,4 @@
     "vite": "^5.1.4"
   }
 }
+
