--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "netlify-identity-widget": "^1.9.1"
+    "netlify-identity-widget": "^1.9.1",
+    "react-router-dom": "^6.22.0"     // ✅ Added this line
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
@@ -30,4 +31,3 @@
     "vite": "^5.1.4"
   }
 }
-
